--- a/css/portfolio-general.css
+++ b/css/portfolio-general.css
@@ -16,9 +16,9 @@ h1 {font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	font-size:36px;
 	font-weight:normal;
 	padding-left: .45em;
-	padding-right:2em;
-	
-	
+	width: 100%;
+}
+nav bar {	
 	-moz-border-radius: 8px 0px 0px 8px;  
 	-webkit-border-top-left-radius: 8px;     	
 	-webkit-border-bottom-left-radius: 8px; 
