--- a/about-general.css
+++ b/about-general.css
@@ -1,7 +1,7 @@
 @-moz-viewport { width: device-width; scale: 1;	}
 @-ms-viewport { width: device-width; scale: 1;	}
 @-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
+@-webkit-viewport { width: device-width, scale: 1; }
 @viewport { width: device-width; scale: 1;	}
 
 body{
@@ -10,7 +10,7 @@ body{
 
 	background-repeat:repeat;
 }
-
+/*
 h1 {font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	color:#FFF;
 	font-size:36px;
@@ -39,12 +39,53 @@ h1 {font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	width: 85%;
 	
 }
+*/
+.container {
+	margin:2em;
 
-
-.site-footer {
-	padding: 0 0 1rem;
 }
 
+footer {
+	max-height: .25 em;
+	padding-left: .45em;
+	padding-right:2em;
+	margin-left: -.5em;
+	position: fixed;
+	bottom: 0;
+	-moz-border-radius: 8px 0px 0px 8px;  
+	-webkit-border-top-left-radius: 0px;     	
+	-webkit-border-bottom-right-radius: 8px; 
+	border-top-right-radius: 8px;  
+	border-bottom-right-radius: 8px;        
+	
+		background: 
+		-webkit-gradient(
+			linear, 
+			left top, 
+			left bottom, 
+			from(#0CC), 
+			to(#099)
+		);
+	
+	float:left;
+	width: 90%;
+	
+		border: 0;
+
+
+}
+
+
+
+footer li {
+	display:inline;
+	padding: .15em;
+	padding-top: .25em;
+}
+
+
+
+/*
 .footer {
 	display:inline-block;
 	margin-bottom: -3em;
@@ -60,11 +101,10 @@ h1 {font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 			from(#0CC), 
 			to(#099)
 		);
-	padding: 1% 3% 6%;
-	
-
-	
+	padding: 1% 3% 6%;	
 }
+*/
+
 
 
 
@@ -74,20 +114,21 @@ h1 {font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 .container2 {
 	width: 57%;
 	float:left;
-	padding-left: 1em;
+	margin-left:0;
+	padding-left: -3em;
 	padding-right:1em;	
 	padding-bottom: 2em;
 	margin-top: -1em;
 	margin-left:3em;
-		
+	/*	
 	-moz-border-radius: 8px 0px 0px 8px;  
 	-webkit-border-top-left-radius: 8px;     	
 	-webkit-border-bottom-left-radius: 8px; 
 	border-top-left-radius: 0px;  
 	border-bottom-left-radius: 8px;        
 
-	background-color:#000;
-	opacity: .25;	
+	background-color:#fff;
+	opacity: 100%;	*/
 
 }
 
@@ -110,7 +151,7 @@ p {
 	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-weight:normal;
 	line-height: 1.3em;
-	font-size:20px;
+	font-size:18px;
 
 
 	margin-bottom: -.5em;
@@ -162,7 +203,7 @@ p {
 	padding-right:3em;
 	/*padding-top:1em;*/
 }
-
+/*
 .container2 {
 	padding-right:3em;	
 	padding-bottom: 2em;
@@ -181,7 +222,7 @@ p {
 	border-bottom-left-radius: 8px;        
 	background-color:#000;
 	opacity: .50;	
-}
+}*/
 
 .box {
 	width: 325px;
