--- a/css/style.css
+++ b/css/style.css
@@ -126,3 +126,21 @@ body{
 	margin-left:5px;
 	top:-3px;
 }
+
+@media only screen and (min-width: 25em) { 
+.slidingMenuDesc,
+.slidingMenuDesc div,
+.slidingMenuDesc div span {
+	visibility:hidden;
+
+}
+}
+
+@media only screen and (min-width: 52.5em) { 
+.slidingMenuDesc,
+.slidingMenuDesc div,
+.slidingMenuDesc div span {
+	visibility:visible;
+
+}
+}
