organized/rearranged folders

--- a/css/about-general.css
+++ b/css/about-general.css
@@ -6,7 +6,7 @@
 
 body{
 	/*background-image:url(images/about-background.png);*/
-	background-image:url(images/wood_1.png);
+	background-image:url(../images/wood_1.png);
 
 	background-repeat:repeat;
 }
