--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ ul{
 	list-style:none;
 }
 body{
-	background-image:url(../wood_1/wood_1.png);
+	background-image:url(../images/wood_1.png);
 	background-repeat:repeat;
 
 	/*background:#292929;*/
