--- a/css/about-general.css
+++ b/css/about-general.css
@@ -45,6 +45,35 @@ h1 {font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 
 }
 
+/* Header Style */
+.container > header {
+	margin: 0 auto;
+	padding: 2em;
+}
+
+.container > header {
+	text-align: center;
+	background: rgba(0,0,0,0.01);
+}
+
+.container > header h1 {
+	font-size: 2.625em;
+	line-height: 1.3;
+	margin: 0;
+	font-weight: 300;
+}
+
+.container > header span {
+	display: block;
+	font-size: 60%;
+	opacity: 0.8;
+	padding: 0 0 0.6em 0.1em;
+}
+
+
+
+
+/*
 footer {
 	max-height: .25 em;
 	padding-left: .45em;
@@ -110,7 +139,7 @@ footer li {
 
 
 
-
+/*
 .container2 {
 	width: 57%;
 	float:left;
