--- a/css/default.css
+++ b/css/default.css
@@ -26,10 +26,10 @@ a:active {
 .wrapper a:focus,
 .wrapper a:active {
 	background-color:#fff;
-	opacity: .50;
-	padding: 5em;
-}
+	/*opacity: .50;*/
 
+	padding: .5em;
+}
 
 /* To Navigation Style */
 .codrops-top {
@@ -185,13 +185,15 @@ body {
 
 .container li {
 	display:inline;
-padding: .35em;
+	padding: .35em;
 }
 
 ul {
 	padding: 0;
 }
-
+container a:hover{
+	color: #099;
+}
 
 .grid effect-6 a,
 .grid effect-6 a:link,
@@ -262,7 +264,7 @@ a:active {
 }
 
 .codrops-top a:hover {
-	color: #424b5a;
+	color: #fff;
 	background: rgba(255,255,255,1);
 }
 
@@ -313,7 +315,7 @@ a:active {
 .codrops-demos a:hover,
 .codrops-demos a.current-demo,
 .codrops-demos a.current-demo:hover {
-	opacity: 0.6;
+	/*opacity: 0.7;*/
 }
 
 .wrapper {
