--- a/css/index-general.css
+++ b/css/index-general.css
@@ -11,80 +11,93 @@ body{
 	background-repeat:repeat;
 }
 
-.box {
-	display: none;
-	padding-top: 15em;
-	width: 75%;
-	max-width: 20em;
-	margin-left:auto;
-	margin-right:auto;
+.title {
+	position:absolute;
+	height: 410 px;
+	width: 410px;
+	top: 130px;
+	overflow: hidden;
+	/*right: 1px;*/
 }
 
-.box2 {
-	display:block;
-	padding-top: 0;
-	max-width: 2em;
-	margin-left:0m;
-	margin-right:0em;
-	margin-top: 3em;
-}
-
-.logostack {
+.title dd {
 	display: block;
+	float:right;
+	clear: both;
+	position: relative;
+	overflow: hidden;
 }
 
-.logo {		
-	float:none;	
-	display: block;
-	width: 75%;
-		/*box-shadow:0px 0px 10px 0px rgba(0, 0, 0, .5);*/
-}
 
 @media only screen and (min-width: 25em) { /*medium*/
 
 
-.logostack {		
-	display: none;
-	width: 100%;
-	margin-top: -10em;
-		/*box-shadow:0px 0px 10px 0px rgba(0, 0, 0, .5);*/
-}	
-
-.logo {
-	display: block;
+#title {
+  width: 400px ;
+  margin-left: auto ;
+  margin-right: auto ;
+   right: 5em;
+left: 5em;
 }
 
+/*
+.title {
+ width: 400px ;
+ margin-left: auto ;
+ margin-right: auto ;
+ right: 5em;
+left: 5em;
 }
-
-@media only screen and (min-width: 38.4em) { /*medium*/
-
-	.logostack {
-		display: none;
-	}
-	.logo {
-		display:block;
+*/
+.gray {
+	float:left;
+	padding:0;
 }
-	.logostack {
-		display: none;
+.sea {
+	float:left;
+	padding:0;
+		margin-left: -1.5em;
+
+}
+.creative {
+	float: left;
+	padding: 0;
 	
 }
+
 }
 
+/*@media only screen and (min-width: 38.4em) { /*medium*/
+/*
+.gray {
+	float:left;
+}
+.sea {
+	float:right;
+}
+.creative {
+	float:left;
+}
+}
+*/
 
 @media only screen and (min-width: 52.5em) { /*large*/
 
-.logostack {
-	display: none;
+.title {
+  width: 700px ;
+  margin-left: auto ;
+  margin-right: auto ;
+  right: 5em;
+left: 5em;
 }
-.logo {
-	display:block;
+.gray, .sea, .creative{
+	float:left;
+	transition: all;
+	 margin-right: -.5em;
+	margin-left: -.5em;
 }
-.box {
-	display:block;
-}
-.box2 {
-	display: none;
-}
+
+
 }
 
 
